public/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: Arial, sans-serif;
  background-color: #f0f0f0;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Times New Roman', Times, serif;
  color: #CC9600;
}

h2 {
  font-size: 2.5rem;
}

h3 {
  font-size: 1.5rem;
}

.logo-container {
  display: flex;
  align-items: center;
}

.logo-container h2 {
  color: #CC9600;
}

#chat-form {
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 2rem auto;
}

#message {
  max-width: 50%;
  padding: 10px;
  border-radius: 10px;
  word-wrap: break-word;
  font-size: 14px;
  height: 30px;
  border: none;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

#send-btn {
  width: 23%;
  height: 30px;
  padding: 10px;
  border: none;
  border-radius: 5px;
  background-color: #4CAF50;
  color: #fff;
  cursor: pointer;
}

#chatbox {
  margin: 20px auto;
  width: 50rem;
  height: 20rem;
  overflow-y: auto;
  padding: 20px;
  background-color: #000;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  list-style-type: none;
}

#chat-log p {
  margin-bottom: 10px;
}
nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-image: url(./img/bg-header.png);
  padding: 1rem 2.5rem;
}
nav ul {
  list-style: none;
  display: flex;
  gap: 15px;
  cursor: pointer;
}
nav ul li a {
  text-decoration: none;
  color: #fff;
  font-size: 1.5rem;
}
#first {
  display: flex;
  justify-content: space-around;
  padding: 1.5rem 3.5rem;
}
.collection {
  background-color: #000;
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr 1fr;
  padding: 4rem 3rem 2rem 3rem;
}
.inside-collection {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.inside-collection p {
  line-height: 1.6rem;
}
.numbers {
  display: flex;
  justify-content: space-between;
}
.numbers p {
  font-family: 'Bona Nova';
  color: #CC9600;
}
.collection button {
  background-color: #000;
  width: 10rem;
  height: 3rem;
  border: 2px solid #CC9600;
  border-radius: 1rem;
  color: #fff;
}
.one {
  background-image: url(./img/bg-smallscreen.png);
  background-repeat: no-repeat;
  background-size: cover;
  height: 30rem;
}
.card-container {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  padding: 2rem 3rem;
  gap: 1rem;
}
.card {
  background-color: #fff;
  border: 1px dotted black;
  box-shadow: #f0f0f0;
  padding: 1rem;
  border-radius: 0.4rem;
}

.card p {
  color: #000
}
.logo {
  cursor: pointer;
}
#handburger {
  display: none;
}
#one {
  background-image: url(./img/bg.png);
  background-size: cover;
  background-repeat: no-repeat;
  height: 45rem;
  padding: 2rem 3rem;
}
#one h2 {
  color: #FF7700;
  text-align: center;
  font-size: 3.5rem;
  font-family: 'Times New Roman', Times, serif;
}
#one p {
  color: #fff;
  text-align: center;
  padding: 2.5rem 7rem;
  font-size: 1.5rem;
  font-family: 'Times New Roman', Times, serif;
}
.login {
  display: flex;
  flex-direction: row;
}
#register-form {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  align-items: center;
  cursor: pointer;
}
#login-form {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  align-items: center;
  cursor: pointer;
}
input {
  width: 30rem;
  height: 2.5rem;
  background-color: #D6CE80;
  outline: none;
  border: none;
  border-radius: 0.5rem;
  padding: 0 1rem;
  margin-bottom: 1rem;
}
#role, #genre {
  background-color: #D6CE80;
  /* align-self: flex-end; */
  /* margin-right: 31rem; */
  height: 1.5rem;
  width: 8rem;
  border-radius: 0.5rem;
}
.div-form {
  padding: 8rem 3rem;
  background-color: #000000;
  width: 100%;
  text-align: center;
  margin-bottom: 0.23rem;
}
#login-btn, #submit-btn, #logout button, #btn-search, #btn-sort {
  width: 5rem;
  height: 2rem;
  border-radius: 0.5rem;
  border: none;
  background-color: #CC9600;
  color: #fff;
  /* margin: 0rem 10rem 0 0; */
  cursor: pointer;
  /* align-self: flex-end; */
}

.loginU {
  display: flex;
  justify-content: space-between;
  gap: 9rem;
  margin-top: 1.5rem;
}
.register {
  display: flex;
  justify-content: space-between;
  gap: 15rem;
  margin-top: 3rem;
}
form p {
  color: #fff;
}
input:focus {
  border: 3px solid #fff;
}
.btn-container {
  width: 30rem;
  height: 2.5rem;
  display: flex;
  justify-content: end;
}
.paginate {
  padding: 0 3rem 2rem 3rem;
  display: flex;
  gap: 1rem;
  text-decoration: none;
}
.paginate a {
  text-decoration: none;
  text-align: center;
  font-size: 1.5rem;
  border: 1px solid #000;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 0.2rem;
}
.message {
  padding: 10px;
  border-radius: 10px;
  max-width: 70%;
  word-wrap: break-word;
}
.sender {
  align-self: flex-end;
  background-color: #007bff;
  color: white;
  text-align: right;
}
.receiver {
  align-self: flex-start;
  background-color: #f1f1f1;
  color: black;
  text-align: left;
}
#hide {
  display: none;
}

.card img {
  width: 15rem;
  border-radius: 0.4rem;
}
#two {
  background-color: #000;
  padding: 2rem 3rem;
  line-height: 1.6rem;
}
#three p {
  padding: 1.2rem;
  color: #000;
  font-size: smaller;
  text-align: center;
  height: 3rem;
}
.greeting {
  padding: 2rem 3rem;
}

@media (max-width: 1025px) {
  #one {
    background-size: contain;
  }
  .one {
    background-size: contain;
  }
 
  .card-container {
    grid-template-columns: 1fr 1fr 1fr;
  }
  #role {
    align-self: flex-start;
    margin-right: 0;
  }
  #login-btn, #submit-btn {
    /* align-self: flex-end; */
    /* margin: 0rem 1rem 0 0; */

  }
}


@media (max-width: 769px) {
  #one {
    background-size: cover;
    background-position: center;
  }
  nav {
    padding: 1rem 1rem;
  }
  nav-list {
    gap: 0;
  }
  .nav-list li a {
    font-size: 1rem;
  }
  .logo-container h2 {
    font-size: 1rem;
  }
  .logo img {
    width: 50px;
  }
  #one h2 {
    color: #FF7700;
    font-size: 2rem;
  }
  #one p {
    color: #fff;
    text-align: center;
    padding: 2.3rem 1.5rem;
    font-size: 1.5rem;
  }
  .collection img {
    width: 90%;
    height: 15rem;
  }
  .card-container {
    grid-template-columns: 1fr 1fr;
  }
  input {
    width: 20rem;
  }
  .btn-container {
    width: 20rem;
  }
  .div-form {
    padding: 4rem 1rem;
  }
  .loginU {
    gap: 4rem;
    margin-top: 1.5rem;
  }
  .login h2 {
    font-size: 2rem;
  }
  .register {
    gap: 6rem;
  }
  #submit-btn {
    margin: 0;
  }
  #first {
    justify-content: space-around;
  }
  #rightnav {
    width: 10rem;
  }

}

@media (max-width: 426px) {
  #one {
    background-size: cover;
    background-position: center;
  }

  .card-container {
    grid-template-columns: auto;
  }

  #chatbox {
    width: 20rem;
    height: 10rem;
  }
  .one {
    background-size: cover;
    height: 10rem;
  }
  #first {
    flex-direction: column;
      padding: 1.5rem 1.5rem;
  }
  nav {
    padding: 1rem 1rem;
    flex-direction: column;
    align-items: flex-start;
  }

  #nav-list {
    height: 12rem;
    width: 100%;
    flex-direction: column;
    gap: 1rem;
    margin: 1.8rem 0;
  }

  .nav-list {
    display: none;
  }

  .logo-container h2 {
    font-size: 1rem;
  }
  .logo img {
    width: 50px;
  }
  #handburger {
    position: absolute;
    top: 2rem;
    right: 1rem;
    display: block;
  }
  p {
    color: #fff;
    font-size: 1rem;
    margin: 1rem 0;
  }
  #two {
    padding: 2rem 1.5rem;
    line-height: 1.6rem;
  }
  #three {
    text-align: center;
  }
  #three p {
    color: #000;
    font-size: smaller;
  }
  #one h2 {
    color: #FF7700;
    font-size: 1.5rem;

  }
  #one p {
    color: #fff;
    text-align: center;
    font-size: 1rem;
  }
  .collection {
    grid-template-columns: auto;
  }
  .logout {
    display: none;
  }
  .login {
    flex-direction: column;
  }
  .register {
    gap: 6rem;
  }
  .login-bg img {
    display: none;
  }
  form button {
    margin: 0rem 0 0 0;
  }
  .loginU p {
    margin-top: 0rem;
  }
  .register p {
    margin: 0;
  }
  #role {
    margin-left: 2.5rem;
  }
  #rightnav {
    width: 8rem;
  }
  .logo-container {
    align-items: normal;
  }
  .message {
    max-width: 50%;
    padding: 0px;
  }
}

@media (max-width: 376px) {
  .card-container {
    grid-template-columns: 1fr;
    align-items: center;
    padding: 0;
  }
  #role {
    margin-left: 0.8rem;
  }
  #card-img {
    width: 18rem;

  }
}

